--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,12 +47,12 @@ layout: default
         <div class="clearfix">
 
           {% if page.previous.url %}
-          <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"
+          <a class="btn btn-primary float-left" href="{{ page.previous.url | absolute_url | replace: '//', '/' }}"
             data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
               Post</span></a>
           {% endif %}
           {% if page.next.url %}
-          <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"
+          <a class="btn btn-primary float-right" href="{{ page.next.url | absolute_url | replace: '//', '/' }}"
             data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
               Post</span> &rarr;</a>
           {% endif %}
