--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,3 +1,83 @@
+/* font experiments */
+@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Itim&display=swap');
+
+:root {
+  --font-family-sans-serif: "Itim", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+body {
+  font-family: "Itim", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 1.25rem;
+}
+
+.tooltip {
+  font-family: "Itim", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.popover {
+  font-family: "Itim", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+button, input, optgroup, select, textarea {
+  font-family: "Itim", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Fredericka the Great", cursive;
+  font-weight: 400;
+}
+
+/* leads and blockquotes border-radius: 25px 25px 55px 5px/5px 55px 25px 25px; */
+.lead {
+  font-size: 1.5rem;
+  font-weight: 200;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  border-style: solid;
+  border-color: #eee;
+  border-width: thin;
+  border-radius: 5px 55px 25px 25px/25px 25px 55px 5px;
+}
+
+.blockquote {
+  display: block;
+  border-width: 2px 0;
+  border-style: solid;
+  border-color: #eee;
+  border-width: thin;
+  border-radius: 5px 35px 25px 25px/25px 25px 45px 5px;
+  padding: 1.5em 1.5em 1.5em;
+  margin: 1.5em 0;
+  position: relative;
+}
+.blockquote:before {
+  content: '\201C';
+  position: absolute;
+  top: 0em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  width: 3rem;
+  height: 2rem;
+  font: 6em/1.08em 'PT Sans', sans-serif;
+  color: #666;
+  text-align: center;
+}
+/*
+.blockquote:after {
+  content: "\2013 \2003" attr(cite);
+  display: block;
+  text-align: right;
+  font-size: 0.875em;
+  color: #e74c3c;
+}
+*/
+
+/* masthead */
 .masthead {
   height: 100vh;
   min-height: 500px;
