--- a/_layouts/quote.html
+++ b/_layouts/quote.html
@@ -6,8 +6,9 @@ layout: default
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center">
-        <h1 class="font-weight-light">Vertically Centered Masthead Content</h1>
-        <p class="lead">A great starter layout for a landing page</p>
+        <blockquote class="blockquote">{{ page.quote }}</blockquote>
+    <cite>{{ page.author }}, {{ page.title }}</cite>
+    <p>{{ page.worldcat }}</p>
       </div>
     </div>
   </div>
